[package]
name = "stat-rs"
version = "0.1.1"
edition = "2021"
description = "A statistics library"
repository = "https://github.com/rawhuul/stat-rs"
readme = "README.md"
license-file = "LICENSE"
categories = ["mathematics"]
keywords= ["statistics", "stats", "maths"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
rust_decimal = { version = "1.35.0", default-features = false, features = ["maths"], optional = true }

[dev-dependencies]
lazy_static = "1.5.0"

[features]
default = [ "no-std" ]
std = []
no-std = [ "dep:rust_decimal" ]
